--- a/STM32/F303RE/.vscode/launch.json
+++ b/STM32/F303RE/.vscode/launch.json
@@ -14,7 +14,7 @@
             "miDebuggerPath": "arm-none-eabi-gdb",
             "miDebuggerServerAddress": "localhost:3333",
             "debugServerPath": "openocd",
-            "debugServerArgs": "-f board/stm32l4discovery.cfg",
+            "debugServerArgs": "-f board/st_nucleo_f3.cfg",
             "serverStarted": "Listening on port .* for gdb connections",
             "filterStderr": true,
             "stopAtConnect": true,
