--- a/STM32/F303RE/.vscode/tasks.json
+++ b/STM32/F303RE/.vscode/tasks.json
@@ -4,17 +4,7 @@
         {
             "label": "Flash",
             "type": "shell",
-            "command": "openocd -f board/stm32l4discovery.cfg -c \"program ${command:cmake.launchTargetPath} verify\" -c \"reset halt\" -c shutdown",
-            "windows": {
-                "options": {
-                    "shell": {
-                        "executable": "cmd.exe",
-                        "args": [
-                            "/c"
-                        ]
-                    }
-                }
-            },
+            "command": "openocd -f board/st_nucleo_f3.cfg -c \"program ${command:cmake.launchTargetPath} verify\" -c \"reset halt\" -c shutdown",
             "problemMatcher": [],
             "dependsOn": [
                 "Build"
@@ -29,15 +19,6 @@
                 "kind": "build",
                 "isDefault": true
             },
-            // This must be commented out to run on Linux.
-            "options": {
-                "shell": {
-                    "executable": "cmd.exe",
-                    "args": [
-                        "/c"
-                    ]
-                }
-            }
         }
     ]
 }
