--- a/STM32/F303RE/.vscode/launch.json
+++ b/STM32/F303RE/.vscode/launch.json
@@ -5,25 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch",
-            "type": "cppdbg",
+            "cwd": "${workspaceRoot}",
+            "executable": "${command:cmake.launchTargetPath}",
+            "name": "Debug with OpenOCD",
             "request": "launch",
-            "cwd": "${workspaceFolder}",
-            "program": "${command:cmake.launchTargetPath}",
-            "MIMode": "gdb",
-            "miDebuggerPath": "arm-none-eabi-gdb",
-            "miDebuggerServerAddress": "localhost:3333",
-            "debugServerPath": "openocd",
-            "debugServerArgs": "-f board/st_nucleo_f3.cfg",
-            "serverStarted": "Listening on port .* for gdb connections",
-            "filterStderr": true,
-            "stopAtConnect": true,
-            "hardwareBreakpoints": {
-                "require": true,
-                "limit": 6
-            },
-            "preLaunchTask": "Flash",
-            "svdPath": "${workspaceFolder}/STM32F303.svd"
+            "type": "cortex-debug",
+            "servertype": "openocd",
+            "configFiles": [
+                "board/st_nucleo_f3.cfg"
+            ],
+            "searchDir": [],
+            "runToEntryPoint": "main",
+            "showDevDebugOutput": "none",
+            "svdFile": "${workspaceRoot}/STM32F303.svd"
         }
     ]
 }
