--- a/STM32/F303RE/cmake/stm32cubemx/CMakeLists.txt
+++ b/STM32/F303RE/cmake/stm32cubemx/CMakeLists.txt
@@ -22,26 +22,26 @@ target_compile_definitions(stm32cubemx INTERFACE
 )
 
 target_include_directories(stm32cubemx INTERFACE
-    ../../Core/Inc
+    ../../Inc
     ../../Drivers/STM32F3xx_HAL_Driver/Inc
     ../../Drivers/CMSIS/Device/ST/STM32F3xx/Include
     ../../Drivers/CMSIS/Include
 )
 
 target_sources(stm32cubemx INTERFACE
-    ../../Core/Src/main.c
-    ../../Core/Src/gpio.c
-    ../../Core/Src/usart.c
-    ../../Core/Src/stm32f3xx_it.c
+    ../../Src/main.c
+    ../../Src/gpio.c
+    ../../Src/usart.c
+    ../../Src/stm32f3xx_it.c
     ../../Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_ll_utils.c
     ../../Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_ll_exti.c
     ../../Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_ll_gpio.c
     ../../Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_ll_usart.c
     ../../Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_ll_rcc.c
     ../../Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_ll_dma.c
-    ../../Core/Src/system_stm32f3xx.c
-    ../../Core/Src/sysmem.c
-    ../../Core/Src/syscalls.c
+    ../../Src/system_stm32f3xx.c
+    ../../Src/sysmem.c
+    ../../Src/syscalls.c
     ../../startup_stm32f303xe.s
 )
 
