--- a/HAL/CMakeLists.txt
+++ b/HAL/CMakeLists.txt
@@ -3,7 +3,9 @@ cmake_minimum_required(VERSION 3.22)
 project(OpenSTM_HAL)
 
 add_library(${PROJECT_NAME} STATIC "App.cpp"
-                                   "Vendor/STMicro/F3/IO/DigitalOut.cpp")
+                                   "Vendor/STMicro/F3/IO/DigitalOut.cpp"
+                                    "Vendor/STMicro/F3/IO/DigitalIn.cpp"
+                                   )
 
 target_link_libraries(${PROJECT_NAME} stm32cubemx)
 
