--- a/Lib/CMakeLists.txt
+++ b/Lib/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.22)
 
 project(OpenSTM_LIB)
 
-add_library(${PROJECT_NAME} STATIC "Math/StmMath.cpp")
+add_library(${PROJECT_NAME} INTERFACE)
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+target_include_directories(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_LIST_DIR})
 
 if(DESKTOP)
   add_subdirectory("Test")
