--- a/HAL/CMakeLists.txt
+++ b/HAL/CMakeLists.txt
@@ -9,7 +9,7 @@ if(EMBEDDED)
       "Vendor/STMicro/F3/Timer/SystemTimer.cpp")
 elseif(DESKTOP)
  
-  find_package(Boost REQUIRED COMPONENTS asio)
+  find_package(boost_asio REQUIRED CONFIG)
 
   set(SOURCES
       "Vendor/Desktop/IO/DigitalOut.cpp" "Vendor/Desktop/IO/DigitalIn.cpp"
@@ -22,7 +22,7 @@ endif()
 add_library(${PROJECT_NAME} STATIC "App.cpp" "Serial/USART_Base.cpp" ${SOURCES} )
 
 if(EMBEDDED)
-target_link_libraries(${PROJECT_NAME} stm32cubemx OpenSTM_LIB)
+target_link_libraries(${PROJECT_NAME} STM32_Drivers OpenSTM_LIB)
 elseif(DESKTOP)
 target_link_libraries(${PROJECT_NAME} OpenSTM_LIB Boost::asio)
 endif()
