--- a/STM32/F303RE/CMakeLists.txt
+++ b/STM32/F303RE/CMakeLists.txt
@@ -21,19 +21,15 @@ endif()
 # Set the project name
 set(CMAKE_PROJECT_NAME F303RE)
 
-# Enable compile command to ease indexing with e.g. clangd
-set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
-
-# Enable CMake support for ASM and C languages
-enable_language(C ASM)
-
 # Core project settings
 project(${CMAKE_PROJECT_NAME})
 message("Build type: " ${CMAKE_BUILD_TYPE})
 
+# Enable CMake support for ASM and C languages
+enable_language(C ASM)
+
 # Create an executable object type
-add_executable(${CMAKE_PROJECT_NAME} "Src/main.c" 
-"Src/stm32f3xx_it.c")
+add_executable(${CMAKE_PROJECT_NAME})
 
 # Add STM32CubeMX generated sources
 add_subdirectory(cmake/stm32cubemx)
